--- a/mycookie/views/index.ejs
+++ b/mycookie/views/index.ejs
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title><%= title %></title>
+    <title>Index</title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
   <body>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
+    <h1><%= username %> <%= email %></h1>
+    <form method="post" action="/">
+        <input type="text" name="username">
+        <input type="email" name="email">
+        <input type="submit" value="送出">
+    </form>
   </body>
 </html>
